# worktime_bot_survey

./: .env  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMPLETED_WORK.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.chatbot  README.md  alembic.ini  create_tables.py  dev.sh  docker-compose.yml  pyproject.toml  start_dev.py
.claude/: settings.local.json
config/: dcri_config.json  dcri_config.json.example  mock_activity_logs.json  mock_time_allocations.json
src/time_profiler/: __init__.py  app.py  chatbot_server.py  data_migration.py  data_retention.py  main.py  models.py  seed_allocation_data.py  seed_mock_data.py
src/time_profiler/ai_insights/: __init__.py  jira_integration.py  problem_aggregator.py  problem_analyzer.py  sentiment.py  solution_engine.py
src/time_profiler/chatbot/: adapters.py  base.py  nlp_processor.py
src/time_profiler/migrations/: env.py
src/time_profiler/migrations/versions/: 0001_create_activitylog.py  0002_add_hours_and_time_allocations.py  0003_add_chatbot_models.py  0004_archive_old_activity_logs.py  0005_data_retention.py
teams/: manifest.json  package_manifest.sh
templates/: admin.html  dashboard.html  index.html
tests/: conftest.py  test_admin_endpoints.py  test_config_endpoint.py  test_data_migration.py  test_initialization.py  test_insights_endpoint.py  test_jira_integration_module.py  test_jira_webhook.py  test_migrations.py  test_nlp_processor.py  test_problem_aggregator.py  test_results_endpoint.py  test_slack_adapter.py  test_solution_engine.py  test_submit_endpoint.py  test_teams_adapter.py
